# Rust_GameBoy

./: .gitignore  .gitmodules  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml
emu/: Cargo.toml
emu-wasm/: Cargo.toml
emu-wasm/src/: lib.rs
emu-wasm/www/: index.html  index.js  package.json  paintworklet.js  webpack.config.js
emu-wasm/www/assets/: elden ring gb v1.0.gb
emu/src/: display.rs  main.rs
lib/: Cargo.toml
lib/src/: big_array.rs  cartridge.rs  cpu.rs  gameboy.rs  gameboy_mode.rs  interrupt.rs  joypad.rs  lib.rs  memory.rs  mmu.rs  ppu.rs  test.rs  util.rs
lib/tests/cgb-acid2/: expect
lib/tests/dmg-acid2/: expect
src/: cartridge.rs  cpu.rs  display.rs  gameboy.rs  joypad.rs  lib.rs  main.rs  memory.rs  mmu.rs  ppu.rs  test.rs  test_rom.rs  util.rs
tests/: MG.gbc  SRW.gb  pokemon_gold_zh.gbc
tests/mts/emulator-only/mbc1/: bits_mode.sav  bits_ramg.sav
