[package]
name = "rust_gameboy"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["gui"]
gui = ["minifb"]

[dependencies]
minifb = { version = "0.23", optional = true }
simplelog = "^0.12.0"
log = "0.4"