[package]
name = "rust_gameboy_core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["serde", "bincode"]
wasm = ["chrono/wasmbind"]

[dependencies]
simplelog = "^0.12.0"
log = "0.4"
chrono = { version = "0.4" }
serde = { version = "1", features = ["derive"], optional = true }
bincode = { version = "1", optional = true }